--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -166,6 +166,12 @@
 				<artifactId>guava</artifactId>
 				<version>32.1.2-jre</version>
 			</dependency>
+			<!-- Fix CVE-2025-48924 : Force commons-lang3 >= 3.18.0 -->
+			<dependency>
+				<groupId>org.apache.commons</groupId>
+				<artifactId>commons-lang3</artifactId>
+				<version>3.18.0</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
